--- a/index.html
+++ b/index.html
@@ -5,6 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio 2</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <!-- font awesome script -->
+    <script
+      src="https://kit.fontawesome.com/10d3ee6fa1.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- bootstrap icon link -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="developer">Developer</div>
+      <nav>
+        <h3>Ma<span class="orange-text">r</span>y</h3>
+        <ul>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><button>Hire Me</button></li>
+        </ul>
+      </nav>
+      <div class="hero">
+        <div class="hero-content">
+          <h3>Hi, I am</h3>
+          <h1>Mary Hardy</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+         <div class="btn-container">
+          <button>
+            <span><i class="bi bi-download"></i></span>
+            <span>Download CV</span>
+          </button>
+          <button>
+            <span><i class="bi bi-telephone"></i></span>
+            <span>Contact</span>
+          </button>
+         </div>
+        </div>
+        <div class="hero-image">
+          <img src="images/hardy.png" alt="">
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
