about me section completed

--- a/index.html
+++ b/index.html
@@ -42,21 +42,54 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-         <div class="btn-container">
-          <button>
-            <span><i class="bi bi-download"></i></span>
-            <span>Download CV</span>
-          </button>
-          <button>
-            <span><i class="bi bi-telephone"></i></span>
-            <span>Contact</span>
-          </button>
-         </div>
+          <div class="btn-container">
+            <button>
+              <span><i class="bi bi-download"></i></span>
+              <span>Download CV</span>
+            </button>
+            <button>
+              <span><i class="bi bi-telephone"></i></span>
+              <span>Contact</span>
+            </button>
+          </div>
         </div>
         <div class="hero-image">
-          <img src="images/hardy.png" alt="">
+          <img src="images/hardy.png" alt="" />
         </div>
       </div>
     </header>
+
+    <main>
+      <section id="about-me">
+        <div>
+          <h3 class="section-title">About Me</h3>
+          <p>
+            I, m a designer & developer with a passion for web design. I enjoy
+            developing simple, clean and slick websites that provide real value to
+            the end user. Thousands of clients have procured exceptional resulfs
+            while working with me. Delivering work within time and budget which
+            meets clients requirements in our mata.
+          </p>
+          <div class="about-info">
+            <div>
+              <p>Name:</p>
+              <h4>Mary Hardy</h4>
+            </div>
+            <div>
+              <p>Email:</p>
+              <h4>info@gmail.com</h4>
+            </div>
+            <div>
+              <p>Date of birth:</p>
+              <h4>11 November 1987</h4>
+            </div>
+            <div>
+              <p>From:</p>
+              <h4>Los Angels, USA</h4>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
