--- a/index.html
+++ b/index.html
@@ -60,15 +60,16 @@
     </header>
 
     <main>
+      <!-- about me section start here -->
       <section id="about-me">
         <div>
           <h3 class="section-title">About Me</h3>
           <p>
             I, m a designer & developer with a passion for web design. I enjoy
-            developing simple, clean and slick websites that provide real value to
-            the end user. Thousands of clients have procured exceptional resulfs
-            while working with me. Delivering work within time and budget which
-            meets clients requirements in our mata.
+            developing simple, clean and slick websites that provide real value
+            to the end user. Thousands of clients have procured exceptional
+            resulfs while working with me. Delivering work within time and
+            budget which meets clients requirements in our mata.
           </p>
           <div class="about-info">
             <div>
@@ -90,6 +91,61 @@
           </div>
         </div>
       </section>
+      <!-- about me section end here -->
+      <!-- what i do section start here -->
+      <section id="what-i-do">
+        <div class="what-i-do">
+          <h3 class="section-title">What I do</h3>
+          <p>
+            I have more than 10 years experience building software for clients
+            all over the world. Below is a quick overview of my main technical
+            skill sets and technologies i use. Want to find out more about my
+            experience? Check out my online resume and project portfolio.
+          </p>
+          <div class="skills-container">
+            <div class="skill">
+              <img src="images/icons/js.png" alt="" />
+              <h3>Vanilla JavaScript</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <div class="skill">
+              <img src="images/icons/react.png" alt="" />
+              <h3>React</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <div class="skill">
+              <img src="images/icons/nodejs.png" alt="" />
+              <h3>Node.js</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <div class="skill">
+              <img src="images/icons/mongo.png" alt="" />
+              <h3>MongoDB</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- what i do section end here -->
     </main>
   </body>
 </html>
