--- a/index.html
+++ b/index.html
@@ -146,6 +146,82 @@
         </div>
       </section>
       <!-- what i do section end here -->
+      <!-- resume section start here -->
+      <section id="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="row">
+          <div class="column">
+            <h3 class="resume-title">My Education</h3>
+            <div>
+              <h3>Master in Computer Engineering</h3>
+              <h4>Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+
+            <div>
+              <h3>Master in Computer Engineering</h3>
+              <h4>Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+
+            <div>
+              <h3>Master in Computer Engineering</h3>
+              <h4>Harvard University / 2015 - 2017</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+          </div>
+          <div class="column">
+            <h3 class="resume-title">My Experience</h3>
+            <div>
+              <h3>Sr. Font End Developer</h3>
+              <h4>Apple Inc / 2020 - Current</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+
+            <div>
+              <h3>Jr. Font End Developer</h3>
+              <h4>Dribbble Inc / 2018 - 2022</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div>
+              <h3>HTML Developer</h3>
+              <h4>Adobe Inc / 2017 - 2018</h4>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- resume section end here -->
     </main>
   </body>
 </html>
