footer section completed

--- a/index.html
+++ b/index.html
@@ -223,5 +223,59 @@
       </section>
       <!-- resume section end here -->
     </main>
+
+    <footer>
+      <div>
+        <section>
+          <h3>Lets Connect</h3>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <ul>
+            <li>
+              <a href="" class="orange-text"
+                ><i class="fa-brands fa-facebook-f"></i
+              ></a>
+            </li>
+            <li>
+              <a href="" class="orange-text"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+            </li>
+            <li>
+              <a href="" class="orange-text"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>Let’s Message me</h3>
+          <form>
+            <input
+              type="text"
+              name="full_name"
+              id="name"
+              placeholder="Your name"
+            />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Your email"
+            />
+            <textarea
+              name="Message"
+              id="message"
+              cols="30"
+              rows="10"
+              placeholder="Message"
+            ></textarea>
+            <input type="submit" value="submit" />
+          </form>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
