added resume section download cv button

--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </p>
-              <hr />
             </div>
           </div>
           <div class="column">
@@ -216,10 +215,13 @@
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </p>
-              <hr />
             </div>
           </div>
         </div>
+        <button class="download-cv-btn">
+          <span><i class="bi bi-download"></i></span>
+          <span>Download CV</span>
+        </button>
       </section>
       <!-- resume section end here -->
     </main>
